--- a/myprofile.html
+++ b/myprofile.html
@@ -44,6 +44,11 @@
   </head>
   <body>
     <div class="card">
+      <p><img src="jane.jpg" style="width : 85%"/></p>
+      <center><h3>Nahathai Sriyapant</h3>
+        <center><h7>Student</h7>
+        <center><h7>Prince of Songkhla University</h7>
+<br>
         <a href="#"><i class="fa fa-dribbble"></i></a>
         <a href="#"><i class="fa fa-twitter"></i></a>
         <a href="#"><i class="fa fa-linkedin"></i></a>
